# safe2ditch

./: .gitignore  .gitmodules  README.md  requirements.txt
catkin_ws/: .gitignore  README.md
catkin_ws/src/: .gitignore  README.md
catkin_ws/src/dss/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/dss/param/: n40.json  n40_config.json  n40_tarmac.json  rock_canyon.json  rock_canyon_config.json
catkin_ws/src/hud/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/hud/include/hud/: hud.h
catkin_ws/src/hud/src/: hud.cpp  node.cpp
catkin_ws/src/montecarlo/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/montecarlo/include/montecarlo/: mc_processor.h  mc_trial.h  polygon.h
catkin_ws/src/montecarlo/launch/: movers.launch  sim.launch
catkin_ws/src/montecarlo/lib/argparse/: git
catkin_ws/src/montecarlo/param/: mc_nasa_config.json  mc_nasa_ditch_sites.json
catkin_ws/src/montecarlo/scripts/: mcmain.py  mcsim.py
catkin_ws/src/montecarlo/src/: mc_processor.cpp  mc_trial.cpp  polygon.cpp  process_bag.cpp
catkin_ws/src/montecarlo/support/: nasa_mav.parm  nasa_way.txt
catkin_ws/src/nasa_s2d/: CMakeLists.txt  package.xml
catkin_ws/src/nasa_s2d/include/tf_frames/: tf_frames.h
catkin_ws/src/nasa_s2d/launch/: geolocate.launch  gps-plotter.launch  hardware.launch  mavros.launch  review.launch  run-camera.launch  safe2ditch.launch  tf_frames.launch  ueye.launch  visualization.launch
catkin_ws/src/nasa_s2d/msg/: DitchSite.msg  DitchSiteList.msg
catkin_ws/src/nasa_s2d/param/: default.yaml  mavros_apm_config.yaml  sully.yaml
catkin_ws/src/nasa_s2d/rqt/: review.perspective
catkin_ws/src/nasa_s2d/rviz/: birdseye.rviz  s2d_geolocation.rviz  safe2ditch.rviz
catkin_ws/src/nasa_s2d/scripts/: README.md  adaptive_params.py  dss_comms.py  dss_node.py  gofast.sh  gps_plotter.py  lifetime_counter.py  mavproxy_launcher.sh  obstacle_detection.py  s2dviz.py
catkin_ws/src/nasa_s2d/src/tf_frames/: tf_frames.cpp
catkin_ws/src/nasa_s2d/srv/: SetUAVPose.srv
catkin_ws/src/nasa_s2d2/: CMakeLists.txt  package.xml
catkin_ws/src/nasa_s2d2/launch/: gps-plotter.launch  rransac-headless.launch  rransac-live-test.launch  run-camera.launch  ueye.launch
catkin_ws/src/nasa_s2d2/scripts/: README.md  plot_local_paths.py
catkin_ws/src/nasa_s2d2_sim/: CMakeLists.txt  package.xml
catkin_ws/src/nasa_s2d2_sim/launch/: sim.launch
catkin_ws/src/nasa_s2d2_sim/models/grass_plane/: model.config  model.rsdf  model.sdf
catkin_ws/src/nasa_s2d2_sim/models/grass_plane/materials/scripts/: grass_dry.material
catkin_ws/src/nasa_s2d2_sim/models/red_spruce/meshes/: red_spruce_lowpoly.dae
catkin_ws/src/nasa_s2d2_sim/models/sequoia/: model.sdf
catkin_ws/src/nasa_s2d2_sim/models/sequoia/meshes/: sequoia_lowpoly.dae
catkin_ws/src/nasa_s2d2_sim/models/tall_pine/materials/scripts/: tall_pine.material
catkin_ws/src/nasa_s2d2_sim/models/tall_pine/meshes/: tall_pine_lowpoly.dae
catkin_ws/src/nasa_s2d2_sim/urdf/: hummingbird_base.xacro
catkin_ws/src/nasa_s2d2_sim/worlds/: park.world
catkin_ws/src/nasa_s2d2_sim/xacro/: camera.xacro
catkin_ws/src/nasa_s2d_sim/: CMakeLists.txt  package.xml
catkin_ws/src/nasa_s2d_sim/launch/: mcsim.launch  movers.launch  movers_mcsim.launch  movers_nasa.launch  movers_rockcanyon.launch  sim.launch  sitl.launch
catkin_ws/src/rosflight_stack/: README.md
catkin_ws/src/s2dviz/: CMakeLists.txt  package.xml  plugin_description.xml
catkin_ws/src/s2dviz/include/s2dviz/: wp_display.h  wp_visual.h
catkin_ws/src/s2dviz/src/: wp_display.cpp  wp_visual.cpp
dotfiles/: .bash_profile  README.md  odroidrc  tx2rc
hardware/camera-mount/: README.md  y6cameramountlower.prt.3  y6cameramountlower.stl  y6cameramountupper.prt.6  y6cameramountupperv2.stl
hardware/jetson-crib/: README.md  s2d_enclosure.prt.10  s2d_enclosure.stl  s2d_enclosure_lid.prt.5  s2d_enclosure_lid.stl
mavproxy/: README.md
mavproxy/modules/: mavproxy_safe2ditch.py
mavproxy/modules/safe2ditch_source/: config_file_parser.py  ditch_site.py  main_simulation.py  visionDataReceiver.py
required_installs/: README.md
s2d_config/: .gitignore  N40_DitchSites.json  N40_Route_V2.json  N40_two_DitchSites.json  config_file.json  s2dEvents.txt
startup/: README.md  rosboot.sh  s2denv  safe2ditch.service  tx2rc
(+53 files in other folders)
