<?xml version="1.0"?>
<package>
  <name>hud</name>
  <version>0.0.0</version>
  <description>Heads-up Display (HUD) for displaying flight info with visual_mtt video</description>

  <maintainer email="parkerclusk@gmail.com">Parker Lusk</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>image_transport</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
