<?xml version="1.0"?>
<package>
  <name>nasa_s2d</name>
  <version>0.0.0</version>
  <description>NASA Safe2Ditch - Vision Assisted Landing</description>
  
  <license>BSD 3-Clause</license>
  
  <maintainer email="parkerclusk@gmail.com">Parker Lusk</maintainer>
  <author email="parkerclusk@gmail.com">Parker Lusk</author>



  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
    <build_depend>geodesy</build_depend>
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
    <run_depend>geodesy</run_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>