<?xml version="1.0"?>
<package>
  <name>nasa_s2d2_sim</name>
  <version>0.0.0</version>
  <description>The nasa_s2d2_sim package</description>
  <maintainer email="parkerclusk@gmail.com">Parker Lusk</maintainer>
  <license>BSD 3-Clause</license>
  <author email="parkerclusk@gmail.com">Parker Lusk</author>


  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>visual_mtt_sim</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- change environmnet variable for models path -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>
</package>