<?xml version="1.0"?>
<package format="2">
  <name>s2dviz</name>
  <version>0.0.0</version>
  <description>rviz plugins for mavros and the NASA Safe2Ditch Project</description>

  <author>Parker Lusk</author>
  <maintainer email="parkerclusk@gmail.com">Parker Lusk</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rviz</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
